--- a/CSS/home.css
+++ b/CSS/home.css
@@ -57,7 +57,7 @@ main{
     gap: 2rem;
     align-items: center;
     background-color: var(--ecom-bg-light);
-    box-shadow: 0 3px 6px #00000029;
+    box-shadow: var(--ecom-shadow);
 }
 .banner{
     margin: 2rem;
@@ -72,7 +72,7 @@ main{
     width: 25rem;
 }
 .footer-card > .icons:hover{
-    color: black;
+    color: var(--ecom-btn-text-color);
     background-color: var(--ecom-bg-dark);
 }
 @media only screen and (max-width: 800px) {
