--- a/CSS/util.css
+++ b/CSS/util.css
@@ -4,6 +4,16 @@
     --ecom-shadow: 0 3px 6px #00000029;
     --ecom-btn-text-color: #111827;
 }
+button{
+    background-color: transparent;
+}
+.ecom-width{
+    width: 4rem;
+}
+.flex-center-row{
+    display: flex;
+    align-items: center;
+}
 .logo-txt{
     font-size: 1.2rem;
 }
@@ -18,6 +28,14 @@
     width: 0;
     background: transparent;
 }
+.ecom-width100{
+    width: 100%;
+}
+.row{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
 .banner-text > .btn{
     background-color: black;
     color: white;
@@ -26,6 +44,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+.pd-hori-lg{
+    padding: 2rem 3rem;
 }
 @media only screen and (max-width: 800px) {
     
