--- a/CSS/base.css
+++ b/CSS/base.css
@@ -1,3 +1,4 @@
+@import url("https://maple-ui.netlify.app/CSS/base.css");
 @import url("./home.css");
 @import url("../CSS/product-list-page.css");
 @import url("./cart.css");
