--- a/CSS/util.css
+++ b/CSS/util.css
@@ -76,6 +76,9 @@ button{
     border-radius: 1rem;
     box-shadow: var(--ecom-shadow);
 }
+.icons{
+    background-color: var(--ecom-bg-light);
+}
 @media only screen and (max-width: 800px) {
     
     .hide-responsive{
